Fixed minor stuff (z-index, closing tags)

--- a/zephyrus/templates_static/zephyrus/css/landing.css
+++ b/zephyrus/templates_static/zephyrus/css/landing.css
@@ -13,8 +13,7 @@
 }
 
 .logo-wrapper{
-    /*firefox dumb*/
-    z-index: 1000;
+    z-index: 10;
 }
 
 
