--- a/zephyrus/templates_static/zephyrus/css/schedule.css
+++ b/zephyrus/templates_static/zephyrus/css/schedule.css
@@ -74,7 +74,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1031;
+    z-index: 100000;
     display: flex;
     justify-content: center;
 }
@@ -161,7 +161,7 @@
 
 #accordion .card-header {
     text-align: center;
-    background-image: linear-gradient(156deg, #0191B4 40%, #D3DD18);
+    background-image: linear-gradient(120deg, #0191B4 40%, #D3DD18);
 }
 
 #accordion .filled-card {
